--- a/bruhhh.html
+++ b/bruhhh.html
@@ -11,23 +11,24 @@
 		<h2><a href="https://youtu.be/ODaV56MKXPA?si=N9kJ-QlszCEeZyhh">legendaran youtube video</a></h2>
 		<h2>animirani plakat za posao :)</h2>
 		<video width="400" height="" controls>
-			<source src="D:\FAKS\DM\html\slike\razvoj softvera kroz razvoj igara.mp4" type="video/mp4">
+			<source src="razvoj softvera kroz razvoj igara.mp4" type="video/mp4">
 		</video>
 		<h2>jedna moja ...pjesma?</h2>
 		<audio controls>
-			<source src="D:\FAKS\DM\html\slike\mjuza.mp3" type="audio/mp3"/>
+			<source src="Dmjuza.mp3" type="audio/mp3"/>
 		</audio>
 
 		<h1>crtezi</h1>
-		<img src="D:\FAKS\DM\html\slike\marulic lik plakat.png"
+		<img src="marulic lik plakat.png"
 		 width="200"/>
-		<img src="D:\FAKS\DM\html\slike\new char.png"
+		<img src="new char.png"
 		 width="200"/>
-		<img src="D:\FAKS\DM\html\slike\snoop bear.png"
+		<img src="snoop bear.png"
 		 width="200"/>
-		<img src="D:\FAKS\DM\html\slike\the baybees.png"0
+		<img src="the baybees.png"0
 		 width="200"/><br/>
 		<a href="index.html">main page</a><br/>
 		<a href="glavna.html">o meni</a>
 	</body>
+
 	</html>
