--- a/vjezba1.html
+++ b/vjezba1.html
@@ -8,10 +8,11 @@
 	<body class="pozadina">
 	<a href="index.html">vrati me doma!</a>
 		<h1>Slike</h1>
-		<img src="D:\FAKS\DM\html\slike\1.png"/>
-		<img src="D:\FAKS\DM\html\slike\3.png"/>
-		<img src="D:\FAKS\DM\html\slike\22.png"/>
-		<img src="D:\FAKS\DM\html\slike\4.png"/>
-		<img src="D:\FAKS\DM\html\slike\vj8_01_original.gif"/>
+		<img src="1.png"/>
+		<img src="3.png"/>
+		<img src="22.png"/>
+		<img src="4.png"/>
+		<img src="vj8_01_original.gif"/>
 	</body>
+
 	</html>
