--- a/vjezba2.html
+++ b/vjezba2.html
@@ -10,11 +10,12 @@
 		<h2>Multimedija</h2>
 		<h3>VIDEO</h3>
 		<video width="400" height="" controls>
-			<source src="D:\FAKS\DM\html\slike\dmvj9moj.mp4" type="video/mp4">
+			<source src="dmvj9moj.mp4" type="video/mp4">
 		</video>
 		<h3>ZVUK</h3>
 		<audio controls>
-			<source src="D:\FAKS\DM\html\slike\mjuza.mp3" type="audio/mp3"/>
+			<source src="mjuza.mp3" type="audio/mp3"/>
 		</audio>
 	</body>
+
 	</html>
