--- a/glavna.html
+++ b/glavna.html
@@ -20,7 +20,7 @@
 
 		<h2>linkovi!</h2>
 		<a href="bruhhh.html">slike i ostalo</a><br/>
-	   <a href="D:\FAKS\DM\vektor\cvijetiveki.pdf">najdrazi zadatak s faksa u pdfu!</a>
+	   <a href="cvijetiveki.pdf">najdrazi zadatak s faksa u pdfu!</a>
 	   <div class="novi_blok">
 	   <h2>malo o meni!</h2>
 	   <p>Moje top 10 najslusanije pjesme u prosincu:</p>
@@ -45,4 +45,5 @@
 			<li>slusanje glazbu</li>
 	   </ul>
 		<a href="index.html">main page</a>
+
 	   </div>
