--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	   
 	   <a href="https://www.w3schools.com">Link na neku drugu stranicu</a><br/>
 	   <a href="vjezba1.html">Link na neki drugi dokument!</a><br/>
-	   <a href="D:\FAKS\DM\vektor\cvijetiveki.pdf">Ovo je link na pdf!</a>
+	   <a href="cvijetiveki.pdf">Ovo je link na pdf!</a>
 	   <div class="novi_blok">
 	   <h2>LISTE!</h2>
 	   <p>Voce prema udjelu vitamina C:</p>
@@ -53,4 +53,5 @@
 	   
  </body>
  </html>
+
  
