--- a/bruhhh.html
+++ b/bruhhh.html
@@ -15,7 +15,7 @@
 		</video>
 		<h2>jedna moja ...pjesma?</h2>
 		<audio controls>
-			<source src="Dmjuza.mp3" type="audio/mp3"/>
+			<source src="mjuza.mp3" type="audio/mp3"/>
 		</audio>
 
 		<h1>crtezi</h1>
@@ -32,3 +32,4 @@
 	</body>
 
 	</html>
+
